--- a/bower.json
+++ b/bower.json
@@ -9,7 +9,8 @@
     "angular-cookies": "~1.0.7",
     "angular-sanitize": "~1.0.7",
     "angular-ui-router": "stable",
-    "underscore": "stable"
+    "underscore": "stable",
+    "bootstrap": "stable"
   },
   "devDependencies": {
     "angular-mocks": "~1.0.7",
